--- a/src/main/resources/templates/index-seleccionar-proveedores.hbs
+++ b/src/main/resources/templates/index-seleccionar-proveedores.hbs
@@ -84,7 +84,9 @@
                     <div class="" style="padding-right: 0;width: -webkit-fill-available">
 
                         <div class="d-flex justify-content-between">
-                            <span class="card-text" style="padding-top: 4px">Prespuestos de {{proveedorElegido.nombreApellidoRazon}}:</span>
+                            <span class="card-text"
+                                  style="padding-top: 4px">Prespuestos de {{proveedorElegido.nombreApellidoRazon}}
+                                :</span>
                             <select name="proveedor" style="padding: 4px">
                                 {{#each presupuestos}}
                                     <option value='{{id}}'>{{cantidad}} items de monto total {{total}}</option>
@@ -95,8 +97,9 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center m-4">
-                    <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Agregar presupuesto
+                    <button type="button" class="btn btn-dark" data-bs-toggle="modal"
+                            data-bs-target="#presupuestoModal" onclick="resetClicks()">
+                        Agregar nuevo presupuesto
                     </button>
                 </div>
             </div>
@@ -111,48 +114,59 @@
 
 <!-- Modal -->
 <form action="/cachePresupuestos" method="post" class="form">
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog">
+    <div class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel"
+         aria-hidden="true" id="presupuestoModal">
+        <div class="modal-dialog" style="max-width: 70%">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Crear nuevo Presupuesto</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                             aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" id="presupuestoModalBody">
+                    <p>Items del presupuesto: </p>
 
-                    <div class="d-flex justify-content-between">
-                        <p class="card-text">Valor Total:</p>
-                        <label>
-                            <input type="text" name="valorTotal" required="required">
-                        </label>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <p class="card-text">Item:</p>
-                        <label>
-                            <input type="text" name="itemName" required="required">
-                        </label>
+                    <div class="card" id="itemCard0" style="margin:8px">
+                        <div class="card-body" id="itemCardBody">
+                            <div class="d-flex justify-content-between">
+                                <p class="card-text">Valor Total:</p>
+                                <label>
+                                    <input type="text" name="valorTotal0" required="required">
+                                </label>
+                            </div>
+                            <div class="d-flex justify-content-between">
+                                <p class="card-text">Item:</p>
+                                <label>
+                                    <input type="text" name="itemName0" id="itemName" required="required">
+                                </label>
+                            </div>
+
+                            <div class="d-flex justify-content-between">
+                                <p class="card-text">Cantidad: </p>
+                                <label>
+                                    <input type="text" name="cantidadItem0" required="required">
+                                </label>
+                            </div>
+                            <div class="d-flex justify-content-between">
+                                <p class="card-text">Monto del articulo:</p>
+                                <label>
+                                    <input type="text" name="valorItem0" required="required">
+                                </label>
+                            </div>
+                            <div class="d-flex justify-content-between">
+                                <p class="card-text">Descripción:</p>
+                                <label>
+                                    <input type="text" name="descripcionItem0" required="required">
+                                </label>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="d-flex justify-content-between">
-                        <p class="card-text">Cantidad: </p>
-                        <label>
-                            <input type="text" name="cantidadItem" required="required">
-                        </label>
+                    <div class="d-flex justify-content-end">
+                        <button class="btn btn-sm btn-dark" type="button" onclick="addItem2()"> Agregar Item</button>
                     </div>
-                    <div class="d-flex justify-content-between">
-                        <p class="card-text">Monto del articulo:</p>
-                        <label>
-                            <input type="text" name="valorItem" required="required">
-                        </label>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <p class="card-text">Descripción:</p>
-                        <label>
-                            <input type="text" name="descripcionItem" required="required">
-                        </label>
-                    </div>
+
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar
@@ -166,6 +180,42 @@
     </div>
 </form>
 
+<script>
+    var itemsCount = 0;
+
+    function resetClicks() {
+        itemsCount = 0;
+    }
+
+    function addItem2() {
+        itemCard = document.getElementById('itemCard'+itemsCount);
+        itemsCount += 1;
+        itemCard2 = itemCard.cloneNode(true);
+        //set new ID
+        itemCard2.setAttribute('id', itemCard2.attributes.item(1).value.slice(0,-1) + itemsCount);
+
+        //card --> card-body --> []dflex con los inputs (solo en pos impar)
+        let dflexs = itemCard2.childNodes.item(1).childNodes;
+
+        for (let i = 0; i < dflexs.length; i++) {
+            if (i % 2 === 0){
+                continue;
+            }
+            //dflex getea un label que getea un input
+            let input = dflexs.item(i).lastElementChild.lastElementChild;
+
+            input.setAttribute('type', 'text');
+            input.setAttribute('value', ' ');
+            input.setAttribute('name', input.name.slice(0,-1)+itemsCount);
+
+        }
+
+
+        itemCard.after(itemCard2);
+    }
+
+
+</script>
 
 <div class="d-flex justify-content-center padding-button-home">
     <button class="btn btn-lg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home</button>
